--- a/force-app/main/default/lwc/p2cParentComponent/p2cParentComponent.html
+++ b/force-app/main/default/lwc/p2cParentComponent/p2cParentComponent.html
@@ -1,8 +1,21 @@
 <template>
+    <div class="slds-var-m-around_medium">
     <c-p2c-alert-component
     message="Hurray !! I got the data"
     card-heading="Parent to Child primitive data communication"
     number=20
     is-valid
     ></c-p2c-alert-component>
+       </div>
+       <div class="slds-var-m-around_medium">
+        <lightning-button variant="brand-outline" 
+        label="Click here" 
+        title="Primary action with lighter look" 
+        onclick={handleClick} class="slds-m-left_x-small">
+        </lightning-button>
+        <c-p2c-Slider></c-p2c-Slider>
+
+       </div> 
+
+
 </template>
